--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/9220eea03a.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <div class="topnav">
             <a href="#home">Home</a>
             <a href="#About">About</a>
@@ -18,7 +19,7 @@
             <a href="#Projects">Contact</a>
         </div>
         <div class="img">
-            <img src="./img/construction.jpg" width="1349" height="500">
+            <img src="./img/construction.jpg" width="1349" height="500" class="imgaj">
         </div>
         <div class="adjust">
             <h2 class="construct">Construction and Engineering - News and Insights</h2>
